--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
-  background-color: #000000;
+  background-color: rgb(18, 25, 74);
 }
 
 canvas {
